force-app/main/default/objects/Robotic_Car_Order__c/Robotic_Car_Order__c.object-meta.xml
<CustomObject>
    <description>Robotic Car Order record created by Agentforce</description>
    <label>Robotic Car Order</label>
    <nameField>
        <displayFormat>ROrder-{0000}</displayFormat>
        <label>Robotic Car Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Robotic Car Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>