force-app/main/default/objects/Robotic_Car_Order__c/fields/Amount_To_Be_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_To_Be_Paid__c</fullName>
    <description>Amount to be paid by customer for using Robotic Car</description>
    <label>Amount To Be Paid</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>