force-app/main/default/objects/Robotic_Car_Order__c/fields/Available_Wallet_Amount1__c.field-meta.xml
<CustomField>
    <fullName>Available_Wallet_Amount1__c</fullName>
    <label>Available Wallet Amount</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>