force-app/main/default/objects/Robotic_Car_Order__c/fields/Available_Wallet_Amount__c.field-meta.xml
<CustomField>
    <fullName>Available_Wallet_Amount__c</fullName>
    <formula>Contact__r.Wallet_Amount__c -  Amount_To_Be_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Wallet Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>