force-app/main/default/objects/Robotic_Car_Order__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Contact</description>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Robotic Car Orders</relationshipLabel>
    <relationshipName>Robotic_Car_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>