force-app/main/default/objects/Robotic_Car_Order__c/fields/Customer_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Last_Name__c</fullName>
    <description>Contact Last Name</description>
    <formula>Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Last Name</label>
    <type>Text</type>
</CustomField>