force-app/main/default/objects/Robotic_Car_Order__c/fields/Date_Time_of_Order_Completion__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_of_Order_Completion__c</fullName>
    <label>Date &amp; Time of Order Completion</label>
    <type>DateTime</type>
</CustomField>