force-app/main/default/objects/Robotic_Car_Order__c/fields/Destination_Geo_Location__c.field-meta.xml
<CustomField>
    <fullName>Destination_Geo_Location__c</fullName>
    <label>Destination Geo Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>