force-app/main/default/objects/Robotic_Car_Order__c/fields/Is_Wallet_Updated__c.field-meta.xml
<CustomField>
    <fullName>Is_Wallet_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Wallet Updated</label>
    <type>Checkbox</type>
</CustomField>