force-app/main/default/objects/Robotic_Car_Order__c/fields/Robotic_Car__c.field-meta.xml
<CustomField>
    <fullName>Robotic_Car__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Robotic Car</label>
    <referenceTo>Robotic_Car__c</referenceTo>
    <relationshipLabel>Robotic Car Orders</relationshipLabel>
    <relationshipName>Robotic_Car_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>